tests/derive/not_run.stderr
error: custom attribute panicked
 --> $DIR/not_run.rs:3:1
  |
3 | #[system(Test)]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: Systems have only one method: run.
