tests/derive/not_run.rs
use shipyard::*;

#[system(Test)]
fn test() {}